--- a/projet2.css
+++ b/projet2.css
@@ -1,5 +1,13 @@
-#conteneur
+
+
+ul
 {
 	display: flex;
-	flex-direction: row;
+	flex-direction: row; 
+	justify-content: flex-end;
+}
+
+p
+{
+	color: blue;
 }
