--- a/projet2.css
+++ b/projet2.css
@@ -203,4 +203,63 @@ justify-content: center;
 }
 
 
+/*Section*/
+
+#conteneur3 
+{
+
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+
+
+    
+}
+.meme_hauteur
+{
+	height: 200px;
+	width: auto;
+}
+
+.lamer
+{
+height: 200px;
+width: auto;
+}
+
+.lepanier
+{
+height: 200px;
+	width: auto;
+}
+
+.zamina
+{
+height: 200px;
+	width: auto;
+}
+
+#conteneur4
+{
+
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+ }
+
+ #conteneur5
+{
+
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+ }
+
+
+
+ 
+
 
