--- a/projet2.css
+++ b/projet2.css
@@ -1,315 +1,31 @@
-body
-{
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
+
+
+
+body{
+	font-family:"Raleway","Sans serif";
+	margin: 0;
+	min-height: 100%;
 
 }
 
-#bloc-page
-{
-	width: auto;
-	margin-left: 5%;
-}
-
-/*Header*/
-
-header
+.header
 {
 	display: flex;
-	justify-content: space-between;
-	align-items: flex-end;
-	margin-left: 5%;
+	align-items: center;
+	max-width: 1390px;
+	margin: auto;
 }
 
-
-#titre_principal
 {
 	display: flex;
-	flex-direction: column;
+    flex-direction: row;
+    align-items: baseline;
 }
-
-#logo
+img
 {
-display: flex;
-flex-direction: row;
-align-items: baseline;
+	border-style: none;
+	padding: 0.2rem;
+    height: 2.8rem;
+    margin-top: 4%;
 }
-
-#logo img
-{
-	width: 95px;
-	height: 45px;
-	
-}
-
-/* Navigation*/
-#conteneur 
-{
-	font-size: 1em;
-    font-weight: normal;
-    display:flex;
-    flex-direction: column; 
-    justify-content: flex-start;
-    align-items: flex-start;
-}
- 
- nav ul
- {	
-     list-style-type: none;
-     display:flex; 
-     align-items: flex-end;
-
-
- }
-nav li
-{
-	margin-right: 75px;
-}
-nav a 
-{
-	font-size: 0.9em;
-	color: #181818;
-	padding-bottom: 3px;
-	text-decoration: none;
-
-}
- nav a:hover /* Apparence au survol des liens*/
- {
- 	color: #DEEBFF solid;
-
- }
-
-p
-{
-display: flex;
-justify-content: flex-start;
-height: 35px;
-text-align: center;
-margin-left: 5%;
-
-}
-label
-{
-	/*Encadrement avec ordre inversé */
-	order: 3;
-	border: 1px #0065FC solid;
-	border-radius: 0px 10px 10px 0px;
-	background-color: #0065FC;
-	width: 82px;
-	height:34px;
-	/*Centrer le mot rechercher*/
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-	
-}
-input
-{
-	order: 2;
-	width: 190px;
-	border-bottom: 1px #F2F2F2 solid;
-	border-top: 1px #F2F2F2 solid;
-	border-right: 1px #0065FC solid;
-	border-left:1px #F2F2F2 solid;
-	
-}
-i
-{
-
-	border: 1px #F2F2F2 solid;
-	border-radius: 10px 0px 0px 10px;
-	background-color: #F2F2F2;
-	width: 43px;
-	height: 34px;
-	display: flex;
-    align-items: center;
-    justify-content: center;
-    
-}
-  #conteneur2
-{
-
-    font-family: 'Raleway', sans-serif;
-	font-size: 12px;
-    display: flex;
-	justify-content: space-between;
-	align-items: flex-start;
-	margin-right: 600px;
-	margin-top: 40px;
-	margin-left: 2.5%;
-}
-
-.Economique
-{
-border:2px #F2F2F2 solid;
-border-radius: 30px 30px 30px 30px;
-width: 120px;
-height: 34px;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-
-.Familial
-{
-border:2px #F2F2F2 solid;
-border-radius: 30px 30px 30px 30px;
-width: 120px;
-height: 34px;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-
-.Romantique
-{
-border:2px #F2F2F2 solid;
-border-radius: 30px 30px 30px 30px;
-width: 120px;
-height: 34px;
-display: flex;
-align-items: center;
-justify-content: center;;
- }
-.Animaux
-{
-border:2px #F2F2F2 solid;
-border-radius: 30px 30px 30px 30px;
-width: 120px;
-height: 34px;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-.filtres
-{
-border:2px #FFFFFF solid;
-border-radius: 30px 30px 30px 30px;
-width: 120px;
-height: 34px;
-display: flex;
-align-items: center;
-justify-content: center;
-}
- aside i
-{
-	border: 1px #DEEBFF solid;
-	border-radius: 50%;
-	background-color: #DEEBFF;
-	width: 43px;
-	height: 34px;
-	display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-/*Section*/
-
-#conteneur3 
-{
-
-	display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-start;
-
-
-    
-}
-.meme_hauteur
-{
-	height: 200px;
-	width: auto;
-}
-
-.lamer
-{
-height: 200px;
-width: auto;
-}
-
-.lepanier
-{
-height: 200px;
-	width: auto;
-}
-
-.zamina
-{
-height: 200px;
-	width: auto;
-}
-
-#conteneur4
-{
-
-	display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-start;
- }
-
- #conteneur5
-{
-
-	display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-start;
- }
-
- /*footer*/
-
-footer 
-{
-	display: flex;
-	flex-direction: wrap;
-    justify-content: space-between; 
-    align-items: flex-start;
-    margin-right: 0%;
-    padding-bottom: 2%;
-    background-color: #F2F2F2;
-
-
-
-}
-footer p 
-{
-    display: flex;
-    flex-direction: column;
-    white-space: nowrap;
-	justify-content: flex-start;
-	align-items: flex-start;
-	margin-right: 200px;
-	font-size: 12px;
-    padding-bottom: 15%;
-    margin-right: 5%;
-
-}
-
-#Apropos h1 
-{
-	font-size: 20px;
-  
-
-}
-
-#Noshébergements h1 
-{
-	font-size: 20px;
-    
-    
-   
- }   
-
-#Assistance h1 
-{
-	font-size: 20px;
-   
-}
-
-
-
-
-
-
