--- a/projet2.css
+++ b/projet2.css
@@ -29,3 +29,45 @@ img
     height: 2.8rem;
     margin-top: 4%;
 }
+.disposition_Nav  
+{
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    justify-content: flex-end;
+    position: relative;
+    top: 30px;
+    left: 900px;
+}
+   
+.disposition_hebergement  
+{
+    padding: 2rem;
+    text-align: center;
+    border-top: 3px solid #0065FC;
+    color: #0065FC;
+}
+.disposition_inscrire
+{
+    display: flex;
+    align-items: center;
+    grid-area: button;
+    padding: 1rem;
+    color: #0065FC;
+    font-weight: 600;
+}
+.disposition_inscrire:hover
+{
+	border-top: 3px solid #0065FC;
+	padding: 2rem;
+}
+.disposition_activity
+{
+	padding: 4rem;
+}
+
+.disposition_activity:hover
+{
+	border-top: 3px solid #0065FC;
+	padding: 2rem;
+}
