--- a/projet2.css
+++ b/projet2.css
@@ -144,3 +144,67 @@ h1
     font-size: 1rem;
     cursor: pointer;
 }
+
+.closed_filters
+{
+    display: inline-flex;
+    margin-top: 4rem;
+    flex-wrap: wrap;
+    white-space: normal;
+    font-family: "Raleway","Sans serif";
+}
+.filters_Title
+{
+	margin: 0 2rem 1rem 0;
+    display: flex;
+    align-items: center;
+    font-size: 1.2em;
+}
+.closed_filters_filtres
+{
+	display: flex;
+    align-items: center;
+    margin-right: 2rem;
+    border: 2px solid #D9D9D9;
+    border-radius: 3rem;
+    width: 12.6rem;
+    margin-bottom: 2rem;
+    cursor: pointer;
+}
+.closed_filters_filtres:hover
+{
+	background-color: #F2F2F2;
+}
+
+.closed_filters_filtres_icon
+{
+	    background-color: #DEEBFF;
+        border-radius: 100%;
+        height: 3rem;
+        width: 3rem;
+        min-height: 3.5rem;
+        min-width: 3.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: -2px;
+        text-align: center
+  }
+  .closed_filters_filtres_icon2
+  {
+  	     font-weight: 900;
+  	     display: inline-block;
+         font-style: normal;
+         font-variant: normal;
+         text-rendering: auto;
+         line-height: 1;
+         color: blue; 
+
+  }
+
+.closed_filters_economic
+{
+	    margin: 0 1rem;
+        margin-left: 3rem;
+        font-weight: bold;
+}
