Icone de recherche Romantique
3éme partie de la barre de filtre avec ajout du css sur la partie concernée

--- a/projet2.css
+++ b/projet2.css
@@ -215,3 +215,10 @@ h1
         margin-left: 4rem;
         font-weight: bold;
 }
+
+.closed-filters_Romantic
+{
+        margin: 0 1rem;
+        margin-left: 2.7rem;
+        font-weight: bold;	
+}
