--- a/projet2.css
+++ b/projet2.css
@@ -230,3 +230,39 @@ h1
         white-space: nowrap;
         font-weight: bold;
 }
+
+.closed_information
+{
+        display: flex;
+        align-items: center;
+        margin: 1rem 0 2rem 0;
+}
+
+.closed_information_i
+{
+         height: 2rem;
+         width: 2rem;
+         min-height: 2rem;
+         min-width: 2rem;
+         border: solid 1px #d9d9d9;
+         border-radius: 100%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         margin-right: 1rem;
+}
+.closed_information_i_icon
+{
+	display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    color: blue;
+}
+
+.information_Text
+{
+    margin: 0;
+    font-family: "Raleway", "Sans serif";
+}
