--- a/projet2.css
+++ b/projet2.css
@@ -146,6 +146,36 @@ section
         font-weight: normal;
         font-size: 20px;
     }
+    @media (max-width: 575px)
+  {
+     section
+     {
+        max-width: 100%;
+        margin: 10px;
+        padding: 3px;
+        box-sizing: border-box;
+     }
+
+     .title
+     {
+         margin-bottom: 6px;
+         margin: 10px;
+
+     }
+    h1 
+    {
+        font-size: 25px;
+        
+    }
+
+    .second_title 
+    {
+        margin-top: 0;
+        font-weight: normal;
+        font-size: 20px;
+        margin: 10px;
+    }
+  }
 
 .search_form 
 {
