--- a/projet2.css
+++ b/projet2.css
@@ -177,52 +177,54 @@ section
     }
   }
 
-.search_form 
-{
-    display: inline-flex;
-    max-width: 100%;
-    height: 3rem;
+ .search_form 
+    {
+        display: inline-flex;
+        max-width: 100%;
+        height: 60px;
+        margin-left: 4%;
+        
+    }
     
-}
-.search_form_icone
-{
-    background-color: #F2F2F2;
-    padding: 1rem 1.2rem;
-    border-radius: 1rem 0 0 1rem;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-}
+    .search_form_icone
+    {
+        background-color: #F2F2F2;
+        padding: 10px 15px;
+        border-radius: 20px 0 0 20px;
+        text-align: center;
+    }
 
-.search_input
-{
-	border-right: none;
-    border-left: none;
-    border-top: #F2F2F2 1px solid;
-    border-bottom: #F2F2F2 1px solid;
-    padding: 0 1.5rem;
-    box-sizing: border-box;
-    width: 16rem;
-   font-size: 1rem;
-   font-weight: bold;
-   font-family: "Raleway","Sans serif";
-}
+    .search_input
+    {
+        border-left: none;
+        border-top: #F2F2F2 1px solid;
+        border-bottom: #F2F2F2 1px solid;
+        padding: 0 40px;
+        box-sizing: border-box;
+       font-size: 15px;
+       font-weight: bold;
+       font-family: "Raleway","Sans serif";
+    }
 
-.search_input_button
-{
+    .search_input_button
+    {
 
-	background-color: #0065FC;
-    color: white;
-    font-weight: bold;
-    border: none;
-    border-radius: 0 1rem 1rem 0;
-    padding: 0 1.5rem;
-    font-family: "Raleway","Sans serif";
-    font-size: 1rem;
-    cursor: pointer;
-}
+      background-color: #0065FC;
+        color: white;
+        font-weight: bold;
+        border: none;
+        border-radius: 0 20px 20px 0;
+        padding: 0 15px;
+        font-family: "Raleway","Sans serif";
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+    .search_input_button_icon
+    {
+        display: none;
+        color:  #0065FC;
+    }
 
 .closed_filters
 {
