--- a/projet2.css
+++ b/projet2.css
@@ -267,124 +267,73 @@ section
 } 
 
 
-.closed_filters
-{
-    display: inline-flex;
-    margin-top: 4rem;
-    flex-wrap: wrap;
-    white-space: normal;
-    font-family: "Raleway","Sans serif";
-}
-.filters_Title
-{
-	margin: 0 2rem 1rem 0;
-    display: flex;
-    align-items: center;
-    font-size: 1.2em;
-}
-.closed_filters_filtres
-{
-	display: flex;
-    align-items: center;
-    margin-right: 2rem;
-    border: 2px solid #D9D9D9;
-    border-radius: 3rem;
-    width: 12.6rem;
-    margin-bottom: 2rem;
-    cursor: pointer;
-}
-.closed_filters_filtres:hover
-{
-	background-color: #F2F2F2;
-}
+closed_filters
+    {
+        display: flex;
+        margin-top: 40px;
+        margin-left: 4%;
+        flex-wrap: wrap;
+        white-space: normal;
+        font-family: "Raleway","Sans serif";
+    }
 
-.closed_filters_filtres_icon
-{
-	    background-color: #DEEBFF;
-        border-radius: 100%;
-        height: 3rem;
-        width: 3rem;
-        min-height: 3.5rem;
-        min-width: 3.5rem;
+    .filters_title
+    {
         display: flex;
         align-items: center;
-        justify-content: center;
-        margin: -2px;
-        text-align: center
-  }
-  .closed_filters_filtres_icon2
-  {
-  	     font-weight: 900;
-  	     display: inline-block;
-         font-style: normal;
-         font-variant: normal;
-         text-rendering: auto;
-         line-height: 1;
-         color: blue; 
-
-  }
-
-.closed_filters_economic
-{
-	    margin: 0 1rem;
-        margin-left: 3rem;
-        font-weight: bold;
-}
-
-.closed_filters_family
-{
-	    margin: 0 1rem;
-        margin-left: 4rem;
-        font-weight: bold;
-}
-
-.closed-filters_Romantic
-{
-        margin: 0 1rem;
-        margin-left: 2.7rem;
-        font-weight: bold;	
-}
-
-.closed_filters_Dog
-{
-	    margin: 0 1rem;
-        margin-left: 0.5rem;
-        white-space: nowrap;
-        font-weight: bold;
-}
-
-.closed_information
-{
-        display: flex;
+        font-size: 20px;
+        margin: 0 20px 20px 0;
+    }
+    .closed_filters_filtres
+    {
+      display: flex;
         align-items: center;
-        margin: 1rem 0 2rem 0;
-}
+        border: 2px solid #D9D9D9;
+        border-radius: 40px;
+        margin-bottom: 30px;
+        margin-right: 40px;
+        cursor: pointer;
+    }
+    
+    .closed_filters_filtres:hover
+    {
+      background-color: #F2F2F2;
+    }
 
-.closed_information_i
-{
-         height: 2rem;
-         width: 2rem;
-         min-height: 2rem;
-         min-width: 2rem;
-         border: solid 1px #d9d9d9;
-         border-radius: 100%;
-         display: flex;
-         align-items: center;
-         justify-content: center;
-         margin-right: 1rem;
-}
-.closed_information_i_icon
-{
-	display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    line-height: 1;
-    color: blue;
-}
+    .closed_filters_filtres_icon
+    {
+          background-color: #DEEBFF;
+            border-radius: 100%;
+            height: 40px;
+            width: 40px;
+            min-height: 50px;
+            min-width: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: -2px;
+            text-align: center
+      }
+      .closed_filters_filtres_icon2
+      {
+             font-weight: 900;
+             display: inline-block;
+             font-style: normal;
+             font-variant: normal;
+             text-rendering: auto;
+             line-height: 1;
+             color: blue; 
 
-.information_Text
-{
-    margin: 0;
-    font-family: "Raleway", "Sans serif";
-}
+      }
+
+    .closed_filters_mix
+    {
+            margin-left: 30px;
+            margin-right: 10px;
+            font-weight: bold;
+            white-space: nowrap;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center
+    }
