--- a/projet2.css
+++ b/projet2.css
@@ -391,3 +391,44 @@ closed_filters
             text-align: center;
     }
  }
+ .closed_information
+    {
+            display: flex;
+            align-items: center;
+            margin: 20px 0 20px 60px;
+    }
+
+    .closed_information
+    {
+            display: flex;
+            align-items: center;
+            margin: 5%;
+   }
+    .closed_information_i
+    {
+             height: 30px;
+             width: 30px;
+             min-height: 30px;
+             min-width: 30px;
+             border: solid 1px #d9d9d9;
+             border-radius: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+             margin-right: 10px;
+    }
+    .closed_information_i_icon
+    {
+      display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        text-rendering: auto;
+        line-height: 1;
+        color: blue;
+    }
+
+    .information_Text
+    {
+        margin: 0;
+        font-family: "Raleway", "Sans serif";
+    }
