--- a/projet2.css
+++ b/projet2.css
@@ -843,3 +843,199 @@ closed_filters
     
 
     }
+      @media(max-width: 575px)
+    {
+
+    .activity
+    {
+
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin-bottom: 40px;
+        max-width: 1400px;
+
+    }
+
+    .activity_header
+    {
+        white-space: nowrap;
+        font-weight: 700;
+        margin-bottom: 30px;
+
+    }
+    .activity_all
+    {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 0;
+      } 
+     
+     .activity_1
+     {
+        display: flex;
+        background-color: white;
+        border-radius: 28px;
+        border: 5px solid white;
+        box-shadow: 0 0 12px #0000002E;
+        height: 130px;
+        width: 340.5px;
+        margin-top: 40px;
+        margin-left: 30px;
+    
+     }
+
+     .activity_2
+     {
+        display: flex;
+        background-color: white;
+        border-radius: 28px;
+        border: 5px solid white;
+        box-shadow: 0 0 12px #0000002E;
+        height: 130px;
+        width: 340.5px;
+        margin-left: 30px;
+        margin-top: 40px;
+    }
+    .activity_3
+    {
+        display: flex;
+        background-color: white;
+        border-radius: 28px;
+        border: 5px solid white;
+        box-shadow: 0 0 12px #0000002E;
+        height: 130px;
+        width: 340.5px;
+        margin-left: 30px;
+        margin-top: 40px;
+    }
+    .activity_4
+    {
+        display: flex;
+        background-color: white;
+        border-radius: 28px;
+        border: 5px solid white;
+        box-shadow: 0 0 12px #0000002E;
+        height: 130px;
+        width: 340.5px;
+        margin-left: 30px;
+        margin-top: 40px;
+    }
+    
+    .activity_5
+    {
+        display: flex;
+        background-color: white;
+        border-radius: 28px;
+        border: 5px solid white;
+        box-shadow: 0 0 12px #0000002E;
+        height: 130px;
+        width: 340.5px;
+        margin-left: 30px;
+        margin-top: 40px;
+    }
+    .activity_6
+    {
+        display: flex;
+        background-color: white;
+        border-radius: 28px;
+        border: 5px solid white;
+        box-shadow: 0 0 12px #0000002E;
+        height: 130px;
+        width: 340.5px;
+        margin-left: 30px;
+        margin-top: 40px;
+    }
+    .activity_1_img
+    {
+        
+        border-top-right-radius: 25px;
+        background-size: 100% 100%;
+        margin-top: -30px;
+    }
+    .activity_4_img
+    {
+        background-size: 100% 100%;
+        border-top-right-radius: 25px;
+        margin-top: -30px;
+    }
+    .activity_2_img
+    {
+        background-size: 100% 100%;
+        border-top-right-radius: 25px;
+        margin-top: -30px;
+    }
+    .activity_3_img
+    {
+        background-size: 100% 100%;
+        border-top-right-radius: 25px;
+        margin-top: -30px;
+        
+    }
+    .activity_5_img
+    {
+        background-size: 100% 100%;
+        border-top-right-radius: 25px;
+        margin-top: -30px;
+        
+    }
+    .activity_6_img
+    {
+        background-size: 100% 100%;
+        border-top-right-radius: 25px;
+        margin-top: -30px;
+    }
+
+
+    .activity_1_img_1
+    {
+        height: 100px;
+        width: 350px;
+        border-top-right-radius: 25px;
+        border-top-left-radius: 25px;
+        object-fit: cover;
+
+    }
+    
+    .activity_2_img_2
+    {
+        width: 350px;
+        height: 100px;
+        border-top-right-radius: 25px;
+        border-top-left-radius: 25px;
+        object-fit: cover;
+
+    }
+    .activity_3_img_3
+    {
+        width: 350px;
+        height: 100px;
+        border-top-right-radius: 25px;
+        border-top-left-radius: 25px;
+        object-fit: cover;
+
+    }
+    .activity_5_img_5
+    {
+        width: 350px;
+        height: 100px;
+        border-top-right-radius: 25px;
+        border-top-left-radius: 25px;
+        object-fit: cover;
+
+    }
+
+    .activity_title
+    {
+        font-size: 12px;
+
+    }
+    .activity_title_img
+    {
+        padding-left: 20px;
+    
+
+    }
+    }
