--- a/projet2.css
+++ b/projet2.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 
-
-
- body
+    body
     {
       font-family:"Raleway","Sans serif";
       margin: 0;
@@ -126,7 +124,9 @@
     }
 
     }
-section
+
+ }
+     section
      {
       max-width: 1400px;
         margin: auto;
@@ -151,7 +151,7 @@ section
         font-weight: normal;
         font-size: 20px;
     }
-    @media (max-width: 575px)
+  @media (max-width: 575px)
   {
      section
      {
@@ -181,8 +181,7 @@ section
         margin: 10px;
     }
   }
-
- .search_form 
+    .search_form 
     {
         display: inline-flex;
         max-width: 100%;
@@ -230,7 +229,7 @@ section
         display: none;
         color:  #0065FC;
     }
-    @media (max-width: 575px) 
+@media (max-width: 575px) 
 {
   .search_form 
   {
@@ -271,8 +270,7 @@ section
   }
 } 
 
-
-closed_filters
+    .closed_filters
     {
         display: flex;
         margin-top: 40px;
@@ -323,10 +321,6 @@ closed_filters
       {
              font-weight: 900;
              display: inline-block;
-             font-style: normal;
-             font-variant: normal;
-             text-rendering: auto;
-             line-height: 1;
              color: blue; 
 
       }
@@ -342,7 +336,7 @@ closed_filters
             justify-content: center;
             text-align: center
     }
-    @media (max-width: 575px)
+ @media (max-width: 575px)
  {
 
     .filters_title
@@ -380,7 +374,6 @@ closed_filters
       {
              font-weight: 900;
              display: inline-block;
-             line-height: 1;
              color: blue; 
 
       }
@@ -390,25 +383,15 @@ closed_filters
             margin-left: 20px;
             font-weight: bold;
             white-space: nowrap;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
     }
  }
- .closed_information
+    .closed_information
     {
             display: flex;
             align-items: center;
             margin: 20px 0 20px 60px;
     }
 
-    .closed_information
-    {
-            display: flex;
-            align-items: center;
-            margin: 5%;
-   }
     .closed_information_i
     {
              height: 30px;
@@ -424,11 +407,6 @@ closed_filters
     }
     .closed_information_i_icon
     {
-      display: inline-block;
-        font-style: normal;
-        font-variant: normal;
-        text-rendering: auto;
-        line-height: 1;
         color: blue;
     }
 
@@ -437,13 +415,25 @@ closed_filters
         margin: 0;
         font-family: "Raleway", "Sans serif";
     }
+
+     @media (max-width: 575px)
+    {
+       .closed_information
+    {
+            display: flex;
+            align-items: center;
+            margin: 5%;
+    } 
+    }
+     
     .accomodation
     {
         display: flex;
         margin: auto;
-        
+        box-sizing: border-box;
         
     }
+   
 
     .accomodation_marseille
     {
@@ -459,7 +449,6 @@ closed_filters
         justify-content: flex-start;
         width: 70%;
         height: auto;
-       
         
     }
 
@@ -467,13 +456,11 @@ closed_filters
     {
         margin: 25px 596px 25px 0px;
         font-weight: 700;
-       
      }
 
     .accomodation_marseille_info
     {
-       margin: 10px 30px 0 30px; 
-       
+       margin: 10px 30px 0 30px;
     }
 
     .accomodation_marseille_articles
@@ -484,7 +471,6 @@ closed_filters
         cursor: pointer;
         height: 30%;
         width: 31.2%;
-        
     }
 
     .figure
@@ -498,17 +484,16 @@ closed_filters
       background-color: transparent;
       cursor: pointer;
       color: black;
-       
     }
 
     .accomodation_marseille_img
     {
       height: 120px;
         object-fit: cover;
-        width: 280px;
+        width: 285px;
         border-radius: 25px 25px 0 0;
         margin: 0.30px 0.7px 0.70px 0;
-        
+        box-sizing: border-box;
 
     }
 
@@ -536,6 +521,74 @@ closed_filters
         font-weight: 600;
 
     }
+    @media (max-width: 575px)
+    {
+        .accomodation
+    {
+        display:flex;
+        flex-direction: column;
+    }
+       .accomodation_marseille
+    {
+       
+        display: flex;
+        background-color: #F2F2F2;
+        border-radius: 25px;
+        margin-left: 5%;
+        width: auto;
+        margin-right: 2%;
+        
+    }
+    .accomodation_marseille_title
+    {
+        
+        font-weight: 700;
+        font-size: 19px;
+        margin-top: -10px;
+
+        }
+     .accomodation_marseille_articles
+    {
+        background-color: white;
+        border-radius: 25px;
+        box-shadow: 0 0 12px #0000002E;
+        cursor: pointer;
+        height: 170px;
+        width: 300px;
+        margin-left: 10px;
+    }
+    .accomodation_marseille_img
+    {
+        height: 90px;
+        object-fit: cover;
+        width: 300px;
+    }
+    .figcaption_title
+    {
+         margin: 5px 20px 0 20px;
+         font-size: 12px;
+
+  }
+  .accomodation_marseille_info
+    {
+       margin: 5px 20px 0 20px; 
+       box-sizing: border-box;
+       font-size: 12px;
+    }
+     .accomodation_marseille_allstar
+    {
+        margin: 5px 10px 0 20px;
+        color: blue;
+        font-size: 10px; 
+    }
+    .show_more
+    {
+        margin: 10px 0px 0px 0;
+        font-weight: 600;
+        font-size: 13px;
+
+    }
+        }
 
     .most_popular
      {
@@ -639,6 +692,63 @@ closed_filters
         color: blue;
         margin-bottom: 35px;
 
+    }
+    @media (max-width: 575px)
+    {
+        .most_popular
+     {
+        
+        background-color: #F2F2F2;
+        border-radius: 30px;
+        margin: 25px;
+        width: 90%;
+    }
+
+    .most_popular_header 
+    {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 26px ;
+        margin-bottom: 40px;
+        margin-right: 10px;
+    }
+
+    .most_popular_accomodation
+    {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin: 23px 23px 65px 23px;
+        
+       
+    }
+
+    .most_popular_accomodation_title 
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+       
+       font-size: 12px;
+    }
+
+    .most_popular_accomodation_title_title 
+    {
+         margin: 0;
+        font-size: 14px;
+    }
+
+    .most_popular_accomodation_description 
+    {
+       margin-bottom: 20px;
+    }
+
+    .most_popular_accomodation_allstar
+    {
+        color: blue;
+        margin-bottom: 15px;
+
+    }
     }
 
     .activity
@@ -848,7 +958,7 @@ closed_filters
     
 
     }
-      @media(max-width: 575px)
+    @media(max-width: 575px)
     {
 
     .activity
@@ -858,7 +968,6 @@ closed_filters
         flex-direction: column;
         flex-wrap: wrap;
         margin-bottom: 40px;
-        max-width: 1400px;
 
     }
 
@@ -866,7 +975,8 @@ closed_filters
     {
         white-space: nowrap;
         font-weight: 700;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        margin-left: 2%;
 
     }
     .activity_all
@@ -875,7 +985,7 @@ closed_filters
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
-        margin: 0;
+        margin-left: -10px;
       } 
      
      .activity_1
@@ -886,9 +996,9 @@ closed_filters
         border: 5px solid white;
         box-shadow: 0 0 12px #0000002E;
         height: 130px;
-        width: 340.5px;
+        width: 320.5px;
         margin-top: 40px;
-        margin-left: 30px;
+        margin-left: 20px;
     
      }
 
@@ -900,8 +1010,8 @@ closed_filters
         border: 5px solid white;
         box-shadow: 0 0 12px #0000002E;
         height: 130px;
-        width: 340.5px;
-        margin-left: 30px;
+        width: 320.5px;
+        margin-left: 20px;
         margin-top: 40px;
     }
     .activity_3
@@ -912,8 +1022,8 @@ closed_filters
         border: 5px solid white;
         box-shadow: 0 0 12px #0000002E;
         height: 130px;
-        width: 340.5px;
-        margin-left: 30px;
+        width: 320.5px;
+        margin-left: 20px;
         margin-top: 40px;
     }
     .activity_4
@@ -924,8 +1034,8 @@ closed_filters
         border: 5px solid white;
         box-shadow: 0 0 12px #0000002E;
         height: 130px;
-        width: 340.5px;
-        margin-left: 30px;
+        width: 320.5px;
+        margin-left: 20px;
         margin-top: 40px;
     }
     
@@ -937,8 +1047,8 @@ closed_filters
         border: 5px solid white;
         box-shadow: 0 0 12px #0000002E;
         height: 130px;
-        width: 340.5px;
-        margin-left: 30px;
+        width: 320.5px;
+        margin-left: 20px;
         margin-top: 40px;
     }
     .activity_6
@@ -949,55 +1059,54 @@ closed_filters
         border: 5px solid white;
         box-shadow: 0 0 12px #0000002E;
         height: 130px;
-        width: 340.5px;
-        margin-left: 30px;
+        width: 320.5px;
+        margin-left: 20px;
         margin-top: 40px;
     }
     .activity_1_img
     {
         
         border-top-right-radius: 25px;
-        background-size: 100% 100%;
-        margin-top: -30px;
+        margin: -30px 0px 0px -25px;
     }
     .activity_4_img
     {
         background-size: 100% 100%;
         border-top-right-radius: 25px;
-        margin-top: -30px;
+        margin: -30px 0px 0px -25px;
     }
     .activity_2_img
     {
         background-size: 100% 100%;
         border-top-right-radius: 25px;
-        margin-top: -30px;
+        margin: -30px 0px 0px -25px;
     }
     .activity_3_img
     {
         background-size: 100% 100%;
         border-top-right-radius: 25px;
-        margin-top: -30px;
+       margin: -30px 0px 0px -25px;
         
     }
     .activity_5_img
     {
         background-size: 100% 100%;
         border-top-right-radius: 25px;
-        margin-top: -30px;
+        margin: -30px 0px 0px -25px;
         
     }
     .activity_6_img
     {
         background-size: 100% 100%;
         border-top-right-radius: 25px;
-        margin-top: -30px;
+       margin: -30px 0px 0px -25px;
     }
 
 
     .activity_1_img_1
     {
         height: 100px;
-        width: 350px;
+        width: 330px;
         border-top-right-radius: 25px;
         border-top-left-radius: 25px;
         object-fit: cover;
@@ -1006,7 +1115,7 @@ closed_filters
     
     .activity_2_img_2
     {
-        width: 350px;
+        width: 330px;
         height: 100px;
         border-top-right-radius: 25px;
         border-top-left-radius: 25px;
@@ -1015,7 +1124,7 @@ closed_filters
     }
     .activity_3_img_3
     {
-        width: 350px;
+        width: 330px;
         height: 100px;
         border-top-right-radius: 25px;
         border-top-left-radius: 25px;
@@ -1024,7 +1133,7 @@ closed_filters
     }
     .activity_5_img_5
     {
-        width: 350px;
+        width: 330px;
         height: 100px;
         border-top-right-radius: 25px;
         border-top-left-radius: 25px;
@@ -1032,18 +1141,8 @@ closed_filters
 
     }
 
-    .activity_title
-    {
-        font-size: 12px;
+    }
 
-    }
-    .activity_title_img
-    {
-        padding-left: 20px;
-    
-
-    }
-    }
 
     .footer
     {
@@ -1085,3 +1184,4 @@ closed_filters
       white-space: nowrap;
     }
     }
+
